[package]
name = "futures_ingester"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }

reqwest = { version = "0.12.12", features = ["json"] } # for http client
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.139"

tungstenite = "0.26.2" # for websocket
tokio-tungstenite = { version = "0.26.2", features = ["native-tls"] } 

futures-util = "0.3"
futures = "0.3"

ordered-float = "*"